@@ -26,6 +26,8 @@ documents those changes that are of interest to users and administrators.
     the name in the slurmctld daemon's state save file.
  -- Better checking when a job is finishing to avoid underflow on job's
     submitted to a QOS/association.
+ -- Handle partition QOS submit limits correctly when a job is submitted to
+    more than 1 partition or when the partition is changed with scontrol.
 
 * Changes in Slurm 17.02.4
 ==========================
